--- a/WazeServer/package.json
+++ b/WazeServer/package.json
@@ -5,10 +5,11 @@
   "main": "server.js",
   "type": "module",
   "dependencies": {
-    "nodemon": "^2.0.15",
+    "amqplib": "^0.8.0",
     "cors": "^2.8.5",
     "esm": "^3.2.25",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
